[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/AuxScenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Taguatinga/RaulinoCronica.gd" type="Script" id=3]
[ext_resource path="res://assets/Images/Taguatinga/3-Taguatinga (não-finalizado).png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Taguatinga/multidão.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/Access01_02/Daco_4140150.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/Taguatinga/raulino_resize25.png" type="Texture" id=7]
[ext_resource path="res://assets/Images/Access01_02/vector-graphics-portable-network-graphics-computer-icons-clip-art-magnifying-glass-png-favpng-uuSX3pTW6uenQcdfUUPDhMESR.png" type="Texture" id=8]
[ext_resource path="res://scenes/AuxScenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Fonts/type-writter/JMH Typewriter.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Images/Taguatinga/raulino_perfil.png" type="Texture" id=12]
[ext_resource path="res://assets/Images/Jogador/JOGADOR.png" type="Texture" id=13]
[ext_resource path="res://assets/Images/Darcy/multidão.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 9 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 744.8, 165 )
scale = Vector2( 1.44828, 1.44828 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 0.352417, 53.5924 )
scale = Vector2( 1.00173, 1.00173 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 461, 380 )
scale = Vector2( 1.29625, 1.29625 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 0.949565, 0.949565 )
texture = ExtResource( 6 )

[node name="TutorialText" type="Label" parent="."]
anchor_left = -0.046875
anchor_top = -0.0885417
anchor_right = 0.0439453
anchor_bottom = 0.175347
margin_left = 250.0
margin_top = 155.0
margin_right = 802.0
margin_bottom = 392.0
rect_rotation = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WritingTime" type="Timer" parent="."]
wait_time = 0.05

[node name="vector-graphics-portable-network-graphics-computer-icons-clip-art-magnifying-glass-png-favpng-uuSX3pTW6uenQcdfUUPDhMESR" type="Sprite" parent="WritingTime"]
visible = false
position = Vector2( 856, 296 )
scale = Vector2( 0.183537, 0.183537 )
texture = ExtResource( 8 )

[node name="PlayerBackPack" parent="." instance=ExtResource( 1 )]

[node name="FinishWriting" type="Timer" parent="."]
wait_time = 5.0

[node name="Continuar" parent="." instance=ExtResource( 2 )]
margin_left = 832.0
margin_top = 496.0
margin_right = 968.0
margin_bottom = 540.0
text = "Continuar"

[node name="ChatBox" parent="." instance=ExtResource( 11 )]
margin_left = -58.0
margin_top = 132.0
margin_right = 38.0
margin_bottom = 180.0
chat = "*R* O meu sobrinho Israel da Silva vai te explicar melhor sobre o que está acontecendo no Plano piloto. Encontre-o por lá."
img = [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ]
cha = [ "P", "R", "M" ]
image_scales = [ Vector2( 0.05, 0.05 ), Vector2( 0.65, 0.65 ), Vector2( 0.13, 0.13 ) ]
nam = [ "Historiadora", "Raulino", "Multidão" ]
resize_panel = [ Vector2( 113, 26 ), Vector2( 90, 26 ), Vector2( 113, 26 ) ]

[connection signal="timeout" from="WritingTime" to="." method="_on_WritingTime_timeout"]
[connection signal="timeout" from="FinishWriting" to="." method="_on_FinishWriting_timeout"]
[connection signal="button_down" from="Continuar" to="." method="_on_Continuar_button_down"]
[connection signal="end_dialog" from="ChatBox" to="." method="_on_ChatBox_end_dialog"]
